# blockchain-app

./: CMakeLists.txt  main.cpp
CipherTable/: CipherAble.h  CipherTable.cpp  CipherTable.h
Helpers/: throw_message.h
Key/: Key.cpp  Key.h
Menu/: Menu.cpp  Menu.h
TextEncrypter/: TextEncrypter.cpp  TextEncrypter.h
backend/includes/: dappgame.h
backend/src/: dappgame.cpp
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: index.js
frontend/src/components/Auth/: Auth.jsx  Wrapper.jsx  index.js
frontend/src/components/Auth/Login/: Login.jsx
frontend/src/components/Button/: Button.jsx  index.js  style.css
frontend/src/services/: ApiService.js  index.js
includes/: dappgame.h
src/: gameplay.cpp
